--- a/package.json
+++ b/package.json
@@ -9,8 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "html2canvas": "^1.4.1"
-  }
+  "type": "commonjs"
 }
